// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes the state 1`] = `
Object {
  "dispatch": Object {
    "increment": [Function],
    "setCount": [Function],
    "sideMenu": Object {
      "increment": [Function],
      "toggle": [Function],
    },
  },
  "state": Object {
    "count": 1,
    "sideMenu": Object {
      "child": Object {
        "isExpanded": false,
      },
      "isOpen": false,
      "maxItems": 100,
    },
  },
}
`;

exports[`changes the state 2`] = `
Object {
  "dispatch": Object {
    "increment": [Function],
    "setCount": [Function],
    "sideMenu": Object {
      "increment": [Function],
      "toggle": [Function],
    },
  },
  "state": Object {
    "count": 11,
    "sideMenu": Object {
      "child": Object {
        "isExpanded": true,
      },
      "isOpen": true,
      "maxItems": 102,
    },
  },
}
`;
